Исправил все проблемы Сонара